# palform

./: .gitignore  Cargo.toml  Containerfile  LICENSE.md  Makefile  README.md  Rocket.toml  bun.lockb  package.json
.github/workflows/: backend.yaml  frontend.yaml  statics.yaml
