[workspace]
members = [
    "packages/backend",
    "packages/migration",
    "packages/entities",
    "packages/client-common",
    "packages/crypto",
    "packages/google-fonts-generator",
    "packages/analysis",
    "packages/tsid",
    "packages/bench",
]
resolver = "2"

[profile.release]
lto = true

[profile.release.package.palform-client-common]
opt-level = 's'

[profile.release.package.palform-crypto]
opt-level = 's'

[profile.release.package.palform-analysis]
opt-level = 's'

[profile.release.package.palform-backend]
opt-level = 3
